# croqtile

./: .gitignore  CMakeLists.txt  Makefile  README.md  co-mock  mkdocs.yml
lib/: CMakeLists.txt  active_threads.hpp  assert_site.cpp  assert_site.hpp  assess.cpp  assess.hpp  ast.cpp  ast.hpp  aux.hpp  choreo_api.hpp  codegen.cpp  codegen.hpp  codegen_prepare.hpp  codegen_utils.cpp  codegen_utils.hpp  colors.hpp  command_line.cpp  context.hpp  derivation.hpp  diversity_analysis.cpp  diversity_analysis.hpp  dmaconf.hpp  earlysema.cpp  earlysema.hpp  fragment_layout.hpp  fs_utils.hpp  interval.hpp  latenorm.hpp  liveness_analysis.cpp  liveness_analysis.hpp  loop_vectorize.cpp  loop_vectorize.hpp  mem_reuse.cpp  mem_reuse.hpp  normalize.hpp  opcode.hpp  operator_info.hpp  options.hpp  parser.yy  pipeline.cpp  (+33 more)
tools/: CMakeLists.txt
tools/choreo/: choreo_main.cpp
tools/co-mock/: CMakeLists.txt  README.md  debugger.cpp  debugger.hpp  mock_interp.cpp  mock_interp.hpp  mock_main.cpp  mock_memory.cpp  mock_memory.hpp
tools/co-mock/tests/: add.co  array2d.co  async_dma.co  atomic_ops.co  bif_math.co  bitwise.co  break_continue.co  chunk_at.co  cute_frag.co  cute_frag_ops.co  cute_mma.co  cute_nested_parallel.co  debugger_info.co  dma.co  dma_pipeline.co  explicit_cast.co  expr.co  fibonacci.co  foreach.co  frag_copy.co  frag_reduce.co  hello.co  histogram.co  ifelse.co  incr_decr.co  lit.cfg  local_vars.co  math_bifs.co  matmul.co  matrix_ops.co  mma_apply.co  mma_basic.co  mma_large.co  mma_methods.co  multi_array.co  multi_stage.co  mutable_vars.co  nested_reduction.co  parallel_2d.co  parallel_nested.co  (+16 more)
tools/co-mock/tests/mock_vs_real/: array2d.co  basic.co  bitwise.co  cast.co  checkerboard.co  chunk_at.co  control_flow.co  expressions.co  fibonacci.co  histogram.co  incr_decr.co  matmul.co  matrix.co  matrix_ops.co  multi_array.co  multi_stage.co  mutable_accum.co  negative_ops.co  nested_foreach.co  reduction.co  scatter_gather.co  scope_vars.co  squares.co  stencil.co  submatrix.co  two_pass.co  while_loop.co
tools/co-py/: CMakeLists.txt  MANIFEST.in  README.md  pyproject.toml  target.mk
tools/co-py/docs/: design.md  syntax-mapping.md
tools/co-py/src/croqtile/: __init__.py  _core.cpp  builder.py  runtime.py  types.py
tools/co-py/tests/: conftest.py  test_basic.py  test_e2e.py  test_gpu_execution.py  test_gpu_ports.py  test_subdir_ports.py
tools/co-web/: CMakeLists.txt  README.md  build.sh  co_web.cpp  interpreter.cpp  interpreter.hpp  target.mk  wasm_api.cpp
tools/co-web/tests/: basic_compile.co  lit.cfg
tools/co-web/web/: choreo-worker.js  co-web-post.js  editor.js  index.html  serve.py  styles.css
tools/co-web/web/server/: Dockerfile  README.md  gpu_server.py
tools/coir/: CMakeLists.txt  README.md  llvm-dep.conf  target.mk
tools/coir/docs/: CODING_STYLE.md  DIALECT_GAPS.md
tools/coir/include/CodeGen/GPU/: CompilePipeline.h  EmitHostStubs.h  HostCompile.h  NativePipeline.h
tools/coir/include/Dialect/CoIR/: CoIRAttrs.h  CoIRAttrs.td  CoIRDialect.h  CoIRDialect.td  CoIROps.h  CoIROps.td  CoIRTypes.h  CoIRTypes.td  Passes.h  Passes.td
tools/coir/lib/ASTIRGen/: ASTCoIRGen.cpp  ASTCoIRGen.hpp  CoIRGen.cpp  MLIRUtility.hpp  Session.hpp
tools/coir/lib/CodeGen/: CoIREmitterBase.cpp  CoIREmitterBase.h  CoIRKernelLowering.cpp  CoIRKernelLowering.h
tools/coir/lib/CodeGen/AMDGPU/: CMakeLists.txt  EmitHIP.cpp
tools/coir/lib/CodeGen/CPU/: CMakeLists.txt  EmitCC.cpp
tools/coir/lib/CodeGen/Common/: CMakeLists.txt
tools/coir/lib/CodeGen/GPU/: CMakeLists.txt  CompilePipeline.cpp  ConvertToGPU.cpp  CuteCodeGen.cpp  EmitCUDA.cpp  EmitHostStubs.cpp  EmitPTX.cpp  HostCompile.cpp  LowerToNVVM.cpp  NVPTXCodeGen.cpp
tools/coir/lib/Driver/: CoCC.cpp  Pipeline.cpp
tools/coir/lib/IR/: CoIRDialect.cpp  CoIROps.cpp  CoIRTypes.cpp
tools/coir/lib/Opt/: CoIROpt.cpp
tools/coir/lib/Transforms/: ClassifyCopies.cpp  CollectAssertStats.cpp  EstimateAssertCost.cpp  HoistAssertions.cpp  HoistDMAConfig.cpp  LowerCopy.cpp  LowerDMADesc.cpp  LowerMMA.cpp  PlanDMACopy.cpp
tools/coir/tests/: copy.mlir  lit.cfg  lit.cfg.py  parallel.mlir
tools/coir/tests/amdgpu/: lit.cfg
tools/coir/tests/amdgpu/e2e/: add.co  atomic_add.co  control_flow.co  copy.co  elementwise.co  foreach.co  integral_types.co  nil.co  numerics.co  pad.co  transpose.co
tools/coir/tests/amdgpu/emit/: emit-hip-call.co  emit-hip-control.mlir  emit-hip-dma-desc.mlir  emit-hip-group.mlir  emit-hip-inthreads.co  emit-hip-ops.mlir  emit-hip-pad.mlir  emit-hip-transpose.mlir  emit-hip.mlir
tools/coir/tests/codegen/gpu/: convert-to-gpu.mlir  gpu-to-llvm.mlir
tools/coir/tests/cpu/: lit.cfg
tools/coir/tests/cpu/e2e/: add.co  control_flow.co  copy.co  elementwise.co  lib_unary.co
tools/coir/tests/cpu/emit/: emit-cc-arith-bif.co  emit-cc-async.co  emit-cc-call.co  (+9 more)
tools/coir/tests/driver/: assert-codegen-dynamic.co  assert-codegen-entry.co  assert-codegen-filtered.co  cc-emit-script.co  cc-emit-source.co  cc-launch-bounds-ignored.co  default-executable.co  e2e-execute.co  emit-coir.co  emit-source.co  launch-bounds-codegen.co  maxnreg-codegen.co  safety-no-opt.co  script-arch.co  stats-hw-constraint.co  stats-report.co  stats-runtime-asserts.co
tools/coir/tests/gpu/: lower-copy.mlir
tools/coir/tests/irgen/: dma-copy.co  dma-kind.co  elementwise-add.co  foreach-swap-iterargs.co  future-rotate.co  if-else-ssa.co  if-in-foreach-ssa.co  if-no-else-ssa.co  kernel-attrs-combined.co  launch-bounds.co  maxnreg.co  tensor-init.co  tile-shape.co  while-break.co  while-structured.co
tools/coir/tests/opt/: basic-coir.mlir  copy.mlir  foreach.mlir  gpu-elementwise-add.mlir  kernel.mlir  mma.mlir  parallel.mlir  tensor-ops.mlir  types.mlir  while.mlir
tools/coir/tests/transform/: classify-copies-sm90-attrs.mlir  classify-copies.mlir  dma-double-buffer-pipeline.mlir  hoist-assertions-cost.mlir  hoist-assertions.mlir  hoist-dma-config.mlir  hoist-dma-nested.mlir  lower-copy.mlir  lower-dma-desc.mlir  lower-mma-mma-sync.mlir  lower-mma-module-attr.mlir  lower-mma.mlir
tools/sdk/: choreo_sdk.hpp  public_api.cpp
(+482 files in other folders)
